<resources>
    <string name="app_name">Books</string>
    <string name="title_books_list_fragment">Books</string>
    <string name="title_new_book_fragment">New Book</string>
    <string name="button_add">Add</string>
    <string name="title_book">Title</string>
    <string name="author_book">Author</string>
    <string name="date_book">Date</string>
    <string name="publication_book">Publication</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="date_picker_title">Date</string>
    <string name="button_change_date">Change</string>
    <string name="add_book">Add book</string>
    <string name="description_book">Description</string>
    <string name="cancel">Cancel</string>
    <string name="erase">Erase</string>
    <string name="alert_question">Discard all changes?</string>
    <string name="title_book_detail">Description</string>
    <string name="format_date_publication">%1$s &amp;&amp; %2$s</string>
</resources>
