<?xml version="1.0" encoding="utf-8"?>
<!-- TODO: много личшних пустых строк -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: не лучший подход для использования ScrollView, а точнее не правильный. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--
                    TODO: не должно быть никаких id типа textView,
                    id должны давать по смыслу e.g. titleTextView, authorTextView
                -->
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_book"
                    android:labelFor="@+id/editText_title_book"/>

                <EditText
                    android:id="@+id/editText_title_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:freezesText="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- TODO: id -->
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/author_book" />

                <EditText
                    android:id="@+id/editText_author_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:freezesText="true"
                    android:inputType="textPersonName"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- TODO: id -->
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/date_book"
                    android:layout_marginEnd="16dp"/>

                <!-- TODO: id -->
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginEnd="16dp"
                    android:freezesText="true"
                    android:text="" />

                <Button
                    android:id="@+id/button_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_change_date" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/publication_book" />

                <EditText
                    android:id="@+id/editText_publication_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:labelFor="@+id/editText_publication_book"
                    android:inputType="textPersonName"
                    android:freezesText="true"
                     />
                <!-- TODO: Отсутствие пустых строк перед закрытием тега -->
                <!--
                    Если это закрывающиеся теги, мы ставим пустые строки между ними, если же преде
                    закрывающимся тегом тег закрытый по умолчанию, то нет.

                    Например:

                     <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/date_book"
                            android:layout_marginEnd="16dp"/>
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="@string/date_book"
                                android:layout_marginEnd="16dp"/>
                        </LinearLayout>

                    </FrameLayout>


                -->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button" />
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button" />
</LinearLayout>